--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	
 	<properties>
 		<docker.image.prefix>kammana</docker.image.prefix>
-		<sonar.host.url>http://44.203.202.224/:9000/</sonar.host.url>
+		<sonar.host.url>http://35.170.186.26:9000/</sonar.host.url>
 
 	</properties>
 	<dependencies>
