--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
 	<distributionManagement>
 		 <snapshotRepository>
 		    <id>nexusRepo</id>
-		    <url>http://54.92.74.107:8081/repository/sample-snapshots/</url>
+		    </url>http://3.92.221.96:8081/repository/sample-snapshot/</url>
 		 </snapshotRepository>
 		
 		<repository>
 		    <id>nexusRepo</id>
-		    <url>http://54.92.74.107:8081/repository/sample-releases/</url>
+		    <url>http://3.92.221.96:8081/repository/sample-releases/</url>
 		</repository>
   	</distributionManagement>
 	
