--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 	<distributionManagement>
 		 <snapshotRepository>
 		    <id>nexusRepo</id>
-		    </url>http://3.92.221.96:8081/repository/sample-snapshot/</url>
+		    <url>http://3.92.221.96:8081/repository/sample-snapshot/</url>
 		 </snapshotRepository>
 		
 		<repository>
